
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 FEB 10a
   * renamed
     - EIGENVALCOND_PARENT -> EIGENVALCOND_PASCAL


2019 FEB 08c
   * in bin 
     - added Pstag.eqn
     - improved cylinder_in_freestream.wrp


2019 FEB 08b
   * in bin
     - modified eigenvalue conditioning parameters in carbuncle.wrp, forward_step.wrp, impinge.wrp


2019 FEB 08a
   * in model/thermo/_generic/thermo.c
     - in _dsk_dT_from_T(), now do not output an error if _CHEM_SET_TE_TO_T_FOR_ARRHENIUS_REACTIONS is defined


2019 FEB 07b
   * in lib/gridg/2Dbase.c and lib/gridg/3Dbase.c
     - renamed JoinPlanes to JoinFaces
   * in model/chem
     - added _Air_Plasma_12s_59r_Dunn-Kang-Macheret
   * in model/thermo/_generic/thermo.c
     - in _sk_from_T(), now do not output an error if _CHEM_SET_TE_TO_T_FOR_ARRHENIUS_REACTIONS is defined
     - in _muk_from_N_Tk_Ek(), added mobilities for NO+, N+, O+
   * in model/chem/doc/report.tex
     - fixed a mistake in one reaction for the Dunn-Kang model: NO- should be NO+


2019 FEB 07a
   * in cycle/resconv/_none/resconv.c
     - in read_disc_resconv_actions(), added gl->cycle.resconv.CONVJACOBIAN=CONVJACOBIAN_NONE
   * in cycle/resconv/_none/resconv.hh
     - in gl_cycle_resconv_t added CONVJACOBIAN
   

2019 FEB 06b
   * in cycle/resconv/*/resconv.c
     - in read_disc_resconv_actions(), added initialization of gl->cycle.resconv.CONVJACOBIAN
   * in cycle/resconv/*/resconv.hh
     - deleted #define CONVJACOBIAN CONVJACOBIAN_FDS
     - in gl_cycle_resconv_t added CONVJACOBIAN
   * in cycle/share/res_share.c
     - removed code for CONVJACOBIAN==CONVJACOBIAN_FROMFLUXEIGENVALUES
   * in cycle/share/ts_share.c
     - removed find_dFstar_dUstar_FROMFLUXEIGENVALUES_interface()
     - in add_dFstar_dUstar_to_TDMA() and find_TDMA_jacobians_conservative()