@@ -164,9 +164,9 @@ Disc(
     AOWENO_gammalo=0.95;
     AOWENO_gammahi=1-1e-4;
     INTERPOL=INTERPOL_AOWENO7;
-    EIGENVALCOND=EIGENVALCOND_GNOFFO;
+    EIGENVALCOND=EIGENVALCOND_PARENT;
     FACEINTEG=FACEINTEG_CENTRAL1; 
-    POSFILTER=POSFILTER_NONE;
+    POSFILTER=POSFILTER_PARENT;
     POSFILTER_numiter=4;
   );
   FVS(
