@@ -124,16 +124,16 @@ Disc(
     EIGENVALCOND=EIGENVALCOND_PASCAL;
   );
   MUSCL(
-    FLUX=FLUX_FVS;
+    FLUX=FLUX_FDS;
     AVERAGING=AVERAGING_ROE;
     
     AOWENO_TYPE=AOWENO_TYPE_DIFFUSIVE;
     AOWENO_gammalo=0.95;
-    AOWENO_gammahi=0.9999;
-    INTERPOL=INTERPOL_AOWENO7;
-    EIGENVALCOND=EIGENVALCOND_GNOFFO;
-    FACEINTEG=FACEINTEG_CENTRAL3;
-    POSFILTER=POSFILTER_NONE;
+    AOWENO_gammahi=0.95;
+    INTERPOL=INTERPOL_AOWENO5;
+    EIGENVALCOND=EIGENVALCOND_PASCAL;
+    FACEINTEG=FACEINTEG_CENTRAL1;
+    POSFILTER=POSFILTER_PARENT;
     POSFILTER_numiter=4;
   );
   FVS(
