@@ -1,4 +1,4 @@
-#define _RESCONV_METHOD "MUSCL+ with flux FVS+ [parent2012a], FDS+ [parent2013a], and primitive interpolation TVD [anderson1986a], WENO [jiang1996a], CWENO [dumbser2007a], AOWENO [balsara2016a], and eigenvalue conditioning HARTEN, GNOFFO [gnoffo2004a], PECLET [parent2017a], PARENT [parent2018a]"
+#define _RESCONV_METHOD "MUSCL+ with flux FVS+ [parent2012a], FDS+ [parent2013a], and primitive interpolation TVD [anderson1986a], WENO [jiang1996a], CWENO [dumbser2007a], AOWENO [balsara2016a], and eigenvalue conditioning HARTEN, GNOFFO [gnoffo2004a], PECLET [parent2017a], PASCAL [parent2018a]"
 #define _RESCONV_MUSCLPLUS
 #define _RESCONV_DELTA_LAMBDA_STORAGE
 #define _RESCONV_POSITIVITY_PRESERVING
