@@ -28,6 +28,7 @@
   #define EIGENVALCOND_GNOFFO 1
   #define EIGENVALCOND_PECLET 2
   #define EIGENVALCOND_PASCAL 3
+  #define EIGENVALCOND_PARENT 4
 #endif
 
 #define EIGENVALCOND_NONE -1
